--- a/PokemonDb/Views/Home/Index.cshtml
+++ b/PokemonDb/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <h1>Welcome to your PokeDex!!</h1>
+<h3>Gotta Create 'Em All!</h3>
 
 <p>@Html.ActionLink("See pokemon types", "Index", "PokeTypes")</p>
 <p>@Html.ActionLink("See all pokemon", "Index", "Pokemons")</p>
