edit view links to h4, edit forloop in pokemon details
Co-authored-by: Garrett Dean Brown <gman9mm@live.com>
Co-authored-by: Jeff Chiu <jeffchiudev@gmail.com>

--- a/PokemonDb/Views/Home/Index.cshtml
+++ b/PokemonDb/Views/Home/Index.cshtml
@@ -5,5 +5,5 @@
 <h1>Welcome to your PokeDex!!</h1>
 <h3>Gotta Create 'Em All!</h3>
 
-<p>@Html.ActionLink("See pokemon types", "Index", "PokeTypes")</p>
-<p>@Html.ActionLink("See all pokemon", "Index", "Pokemons")</p>
+<h4>@Html.ActionLink("See pokemon types", "Index", "PokeTypes")</h4>
+<h4>@Html.ActionLink("See all pokemon", "Index", "Pokemons")</h4>
