--- a/PokemonDb/Views/PokeTypes/Delete.cshtml
+++ b/PokemonDb/Views/PokeTypes/Delete.cshtml
@@ -11,5 +11,5 @@
 {
     <input type="submit" value="Delete" />
 }
-<p>@Html.ActionLink("Back to Pokemon Type List", "Index")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<h4>@Html.ActionLink("Back to Pokemon Type List", "Index")</h4>
+<h4>@Html.ActionLink("Home", "Index", "Home")</h4>
