--- a/PokemonDb/Views/PokeTypes/Edit.cshtml
+++ b/PokemonDb/Views/PokeTypes/Edit.cshtml
@@ -18,5 +18,5 @@
     <input type="submit" value="Save" />
 }
 
-<p>@Html.ActionLink("Back to Pokemon Types", "Index")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<h4>@Html.ActionLink("Back to Pokemon Types", "Index")</h4>
+<h4>@Html.ActionLink("Home", "Index", "Home")</h4>
