--- a/PokemonDb/Views/Pokemons/Create.cshtml
+++ b/PokemonDb/Views/Pokemons/Create.cshtml
@@ -31,5 +31,5 @@
     <input type="submit" value="Add new Pokemon" class="btn btn-default" />
 }
 
-<p>@Html.ActionLink("Show all pokemon", "Index")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<h4>@Html.ActionLink("Show all pokemon", "Index")</h4>
+<h4>@Html.ActionLink("Home", "Index", "Home")</h4>
