--- a/PokemonDb/Views/Pokemons/Delete.cshtml
+++ b/PokemonDb/Views/Pokemons/Delete.cshtml
@@ -11,5 +11,5 @@
 {
     <input type="submit" value="Delete" class="btn btn-danger" />
 }
-<p>@Html.ActionLink("Back to your Pokemon List", "Index")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<h4>@Html.ActionLink("Back to your Pokemon List", "Index")</h4>
+<h4>@Html.ActionLink("Home", "Index", "Home")</h4>
