--- a/PokemonDb/Views/PokeTypes/Index.cshtml
+++ b/PokemonDb/Views/PokeTypes/Index.cshtml
@@ -6,6 +6,7 @@
 @model List<PokemonDb.Models.PokeType>;
 
 <h1>Pokemon Types</h1>
+<hr />
 
 @if (@Model.Count == 0)
 {
@@ -17,5 +18,5 @@
     <li>@Html.ActionLink($"{pokeType.PokeTypeName}", "Details", new { id = pokeType.PokeTypeId })</li>
 }
 
-<p>@Html.ActionLink("Add new type", "Create")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<h4>@Html.ActionLink("Add new type", "Create")</h4>
+<h4>@Html.ActionLink("Home", "Index", "Home")</h4>
