--- a/PokemonDb/Views/Pokemons/Details.cshtml
+++ b/PokemonDb/Views/Pokemons/Details.cshtml
@@ -9,7 +9,14 @@
 <h3>Pokemon Name: @Html.DisplayFor(model => model.PokemonName)</h3>
 <h3>Pokemon Description: @Html.DisplayFor(model => model.PokemonDescription)</h3>
 <h3>Pokemon Gender: @Html.DisplayFor(model => model.PokemonGender)</h3>
-@* <h3>Pokemon Type: @Html.DisplayFor(Model.PokeTypes.PokeType.PokeTypeName)</h3> *@
+<h3>Pokemon Level: @Html.DisplayFor(model => model.PokemonLevel)</h3>
+
+@using (Html.BeginForm("LevelUp", "Pokemons"))
+{
+    @Html.HiddenFor(model => model.PokemonId)
+
+    <input type="submit" value="Level Up" />
+}
 
 @if (Model.PokeTypes.Count == 0)
 {
@@ -29,3 +36,6 @@ else
 <h4>@Html.ActionLink("Edit Pokemon", "Edit", new { id = Model.PokemonId })</h4>
 <h4>@Html.ActionLink("Delete Pokemon", "Delete", new { id = Model.PokemonId })</h4>
 <h4>@Html.ActionLink("Home", "Index", "Home")</h4>
+
+
+@* <h3>Pokemon Type: @Html.DisplayFor(Model.PokeTypes.PokeType.PokeTypeName)</h3> *@
