--- a/PokemonDb/Views/Home/Index.cshtml
+++ b/PokemonDb/Views/Home/Index.cshtml
@@ -3,8 +3,9 @@
 }
 
 <h1>Welcome to your PokeDex!!</h1>
+<hr />
 <h3>Gotta Create 'Em All!</h3>
 
 
-<h4>@Html.ActionLink("See pokemon types", "Index", "PokeTypes")</h4>
-<h4>@Html.ActionLink("See all pokemon", "Index", "Pokemons")</h4>
+<h4>@Html.ActionLink("See Pokemon Types", "Index", "PokeTypes")</h4>
+<h4>@Html.ActionLink("See All Pokemon", "Index", "Pokemons")</h4>
