--- a/PokemonDb/Views/Pokemons/Create.cshtml
+++ b/PokemonDb/Views/Pokemons/Create.cshtml
@@ -27,9 +27,10 @@
     @Html.TextBoxFor(model => model.PokemonDescription)
 
     <br>
+    <hr />
 
-    <input type="submit" value="Add new Pokemon" class="btn btn-default" />
+    <input type="submit" value="Add new Pokemon" class="btn btn-primary" />
 }
 
-<h4>@Html.ActionLink("Show all pokemon", "Index")</h4>
+<h4>@Html.ActionLink("Show All Pokemon", "Index")</h4>
 <h4>@Html.ActionLink("Home", "Index", "Home")</h4>
