--- a/PokemonDb/Views/PokeTypes/Create.cshtml
+++ b/PokemonDb/Views/PokeTypes/Create.cshtml
@@ -5,11 +5,15 @@
 @model PokemonDb.Models.PokeType;
 
 <h1>Add a new Pokemon Type</h1>
+<hr />
 @using (Html.BeginForm())
 {
-    @Html.LabelFor(model => model.PokeTypeName)
-    @Html.TextBoxFor(model => model.PokeTypeName)
-    <input type="submit" value="Add a new pokemon type" />
+    <h3>Pokemon Type Name: @Html.TextBoxFor(model => model.PokeTypeName) <input type="submit" value="Add new pokemon type"
+        class="btn btn-primary" /></h3>
+
+    @* <input type="submit" value="Add a new pokemon type" class="btn btn-primary" /> *@
 }
+
+<hr />
 <h4>@Html.ActionLink("Show all pokemon types", "Index")</h4>
 <h4>@Html.ActionLink("Home", "Index", "Home")</h4>
