--- a/PokemonDb/Views/Pokemons/Details.cshtml
+++ b/PokemonDb/Views/Pokemons/Details.cshtml
@@ -6,36 +6,39 @@
 
 <h1>Pokemon Details</h1>
 <hr />
-<h3>Pokemon Name: @Html.DisplayFor(model => model.PokemonName)</h3>
-<h3>Pokemon Description: @Html.DisplayFor(model => model.PokemonDescription)</h3>
-<h3>Pokemon Gender: @Html.DisplayFor(model => model.PokemonGender)</h3>
-<h3>Pokemon Level: @Html.DisplayFor(model => model.PokemonLevel)</h3>
+<div class="pokeDetails">
+    <h3>Pokemon Name: @Html.DisplayFor(model => model.PokemonName)</h3>
+    <h3>Pokemon Description: @Html.DisplayFor(model => model.PokemonDescription)</h3>
+    <h3>Pokemon Gender: @Html.DisplayFor(model => model.PokemonGender)</h3>
+    @if (Model.PokeTypes.Count == 0)
+    {
+        <h4>@Html.DisplayFor(model => model.PokemonName) doesn't have an associated type</h4>
+    }
+    else
+    {
+        <h3>Pokemon Type:</h3>
+        <ul>
+            @foreach (var join in Model.PokeTypes)
+            {
+                <li>@join.PokeType.PokeTypeName</li>
+            }
+        </ul>
+    }
 
-@using (Html.BeginForm("LevelUp", "Pokemons"))
-{
-    @Html.HiddenFor(model => model.PokemonId)
+    @using (Html.BeginForm("LevelUp", "Pokemons"))
+    {
+        @Html.HiddenFor(model => model.PokemonId)
+        <h3>Pokemon Level: @Html.DisplayFor(model => model.PokemonLevel) <input type="submit" value="Level Up"
+                class="btn btn-success" /></h3>
+    }
 
-    <input type="submit" value="Level Up" />
-}
 
-@if (Model.PokeTypes.Count == 0)
-{
-    <h4>@Html.DisplayFor(model => model.PokemonName) doesn't have an associated type</h4>
-}
-else
-{
-    <ul>
-    @foreach (var join in Model.PokeTypes)
-        {
-            <h3>Pokemon Type: @join.PokeType.PokeTypeName</h3>
-        }
-    </ul>
-}
 
-<h4>@Html.ActionLink("Show all pokemon", "Index")</h4>
-<h4>@Html.ActionLink("Edit Pokemon", "Edit", new { id = Model.PokemonId })</h4>
-<h4>@Html.ActionLink("Delete Pokemon", "Delete", new { id = Model.PokemonId })</h4>
-<h4>@Html.ActionLink("Home", "Index", "Home")</h4>
-
+    <hr />
+    <h4>@Html.ActionLink("Show all pokemon", "Index")</h4>
+    <h4>@Html.ActionLink("Edit Pokemon", "Edit", new { id = Model.PokemonId })</h4>
+    <h4>@Html.ActionLink("Delete Pokemon", "Delete", new { id = Model.PokemonId })</h4>
+    <h4>@Html.ActionLink("Home", "Index", "Home")</h4>
+</div>
 
 @* <h3>Pokemon Type: @Html.DisplayFor(Model.PokeTypes.PokeType.PokeTypeName)</h3> *@
