--- a/PokemonDb/wwwroot/css/styles.css
+++ b/PokemonDb/wwwroot/css/styles.css
@@ -2,9 +2,18 @@ body {
   background-image: url("https://images.unsplash.com/photo-1542779283-429940ce8336?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cG9rZW1vbnxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60");
   background-repeat: no-repeat;
   background-size: cover;
-  color: darkred;
+  color: #c3591f;
   text-align: center;
 }
 h1 {
+  font-family: "Amarante", Tahoma, sans-serif;
+  font-weight: bold;
+  font-size: 3.6em;
+  line-height: 1.7em;
+  margin-bottom: 10px;
   color: white;
+}
+.pokeDetails {
+  text-align: left;
+  color: darkcyan;
 }
