add trainer controller, views, update readme
Co-authored-by: Garrett Dean Brown <gman9mm@live.com>
Co-authored-by: Jeff Chiu <jeffchiudev@gmail.com>

--- a/PokemonDb/Views/Home/Index.cshtml
+++ b/PokemonDb/Views/Home/Index.cshtml
@@ -6,6 +6,6 @@
 <hr />
 <h3>Gotta Create 'Em All!</h3>
 
-
+<h4>@Html.ActionLink("See Pokemon Trainers", "Index", "Trainers")</h4>
 <h4>@Html.ActionLink("See Pokemon Types", "Index", "PokeTypes")</h4>
 <h4>@Html.ActionLink("See All Pokemon", "Index", "Pokemons")</h4>
